--- a/YazGelProje/Web.config
+++ b/YazGelProje/Web.config
@@ -25,7 +25,7 @@
   </system.web>
 	<connectionStrings>
 		<add name="MyContext"
-		 connectionString="data source=DESKTOP-QC9SCSK;
+		 connectionString="data source=DESKTOP-SQDER0I;
             initial catalog=yazgelDB;
             integrated security=True;"
 		 providerName="System.Data.SqlClient" />
